--- a/SearchPage/index.html
+++ b/SearchPage/index.html
@@ -51,39 +51,129 @@
 	  											<!-- FILTER MENU -->
 	  											<!--             -->
 	  
-		<div id="menuCol" class="col-3" style="background-color: coral">
-			<div class="row"><div class="col text-center"><h3>Filter criteria</h3></div></div>
-			
-	  											<!--            -->
-	  											<!-- AGE FILTER -->
-	  											<!--            -->
+		<div id="menuCol" class="col-3">
+			<div class="row"
+				 style="background-color: #2b2b2b;
+						border-radius: 0 25px 25px 0;
+						height: auto;
+						padding-bottom: 30px">
+				<div id="innerMenuCol" class="col">
+					<div class="row mt-3"><div class="col text-center"><h3 class="text-white">Filter criteria</h3></div></div>
 
-			<div id="ageBtnRow" class="row justify-content-center text-center">
-				<button class="btn btn-primary m-3" type="button" data-toggle="collapse" data-target="#ageSets" aria-expanded="false" aria-controls="ageSets">Age</button>
-			</div>
-			<div id="ageFiltRow" class="row justify-content-center text-center">
-				<div class="ml-1 mr-1 collapse" id="ageSets" style="width: 100%;">
-					<div class="row no-gutters">
-						<div class="col-5">
-							<select id="minAge" class="custom-select">
-								<option value="any" selected>Any</option>
-								<option value="18">18</option>
-								<option value="19">19</option>
-							</select>
+														<!--            -->
+														<!-- AGE FILTER -->
+														<!--            -->
+
+					<div id="ageBtnRow" class="row justify-content-center text-center">
+						<button class="btn btn-primary m-3" type="button" data-toggle="collapse" data-target="#ageSets" aria-expanded="false" aria-controls="ageSets">Age</button>
+					</div>
+					<div id="ageFiltRow" class="row justify-content-center text-center">
+						<div class="ml-1 mr-1 collapse" id="ageSets" style="width: 100%;">
+							<div class="row no-gutters">
+								<div class="col-5">
+									<select id="minAge" class="custom-select">
+										<option value="any" selected>Any</option>
+										<option value="18">18</option>
+										<option value="19">19</option>
+									</select>
+								</div>
+								<div class="col-2"><p>-</p></div>
+								<div class="col-5">
+									<select id="maxAge" class="custom-select">
+										<option value="any" selected>Any</option>
+										<option value="18">18</option>
+										<option value="19">19</option>
+									</select>
+								</div>
+							</div>
 						</div>
-						<div class="col-2"><p>-</p></div>
-						<div class="col-5">
-							<select id="maxAge" class="custom-select">
-								<option value="any" selected>Any</option>
-								<option value="18">18</option>
-								<option value="19">19</option>
-							</select>
+					</div>
+
+														<!--                 -->
+														<!-- DISTANCE FILTER -->
+														<!--                 -->
+
+					<div id="distBtnRow" class="row justify-content-center text-center">
+						<button class="btn btn-primary m-3" type="button" data-toggle="collapse" data-target="#distSets" aria-expanded="false" aria-controls="distSets">Distance</button>
+					</div>
+					<div id="distFiltRow" class="row justify-content-center text-center">
+						<div class="ml-2 mr-2 collapse" id="distSets" style="width: 100%;">
+							<div class="row no-gutters">
+								<div class="col-5">
+									<input id="minDist"
+										   class="form-control input-group-lg reg_name"
+										   type="text"
+										   name="minDist"
+										   title="Minimal distance"
+										   placeholder="From"/>
+								</div>
+								<div class="col-2"><p>-</p></div>
+								<div class="col-5">
+									<input id="maxDist"
+										   class="form-control input-group-lg reg_name"
+										   type="text"
+										   name="minDist"
+										   title="Minimal distance"
+										   placeholder="To"/>
+								</div>
+							</div>
+						</div>
+					</div>
+					
+														<!--               -->
+														<!-- RATING FILTER -->
+														<!--               -->
+
+					<div id="rateBtnRow" class="row justify-content-center text-center">
+						<button class="btn btn-primary m-3" type="button" data-toggle="collapse" data-target="#rateSets" aria-expanded="false" aria-controls="rateSets">Rating</button>
+					</div>
+					<div id="rateFiltRow" class="row justify-content-center text-center">
+						<div class="ml-2 mr-2 collapse" id="rateSets" style="width: 100%;">
+							<div class="row no-gutters">
+								<div class="col-5">
+									<input id="minRate"
+										   class="form-control input-group-lg reg_name"
+										   type="text"
+										   name="minRate"
+										   title="Minimal rating"
+										   placeholder="From"/>
+								</div>
+								<div class="col-2"><p>-</p></div>
+								<div class="col-5">
+									<input id="maxRate"
+										   class="form-control input-group-lg reg_name"
+										   type="text"
+										   name="minRate"
+										   title="Minimal rating"
+										   placeholder="To"/>
+								</div>
+							</div>
+						</div>
+					</div>
+					
+														<!--             -->
+														<!-- TAGS FILTER -->
+														<!--             -->
+
+					<div id="tagsBtnRow" class="row justify-content-center text-center">
+						<button class="btn btn-primary m-3" type="button" data-toggle="collapse" data-target="#tagsSets" aria-expanded="false" aria-controls="tagSets">Required Tags</button>
+					</div>
+					<div id="tagsFiltRow" class="row justify-content-center text-center">
+						<div class="ml-2 mr-2 collapse" id="tagsSets" style="width: 100%;">
+							<div class="row no-gutters">
+								<div class="col">
+									<input id="reqTags"
+										   class="form-control input-group-lg reg_name"
+										   type="text"
+										   name="reqTags"
+										   title="Required tags"
+										   placeholder="Required tags (commas)"/>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-			
-			
 		</div>
 	  											<!--                       -->
 	  											<!-- RESULTS OF THE FILTER -->
